--- a/package.json
+++ b/package.json
@@ -4,8 +4,52 @@
   "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "author": "seokju-na",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "autoprefixer": "^6.3.1",
+    "babel": "^6.1.18",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-h-children-fix": "^1.1.0",
+    "babel-plugin-transform-react-jsx": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-register": "^6.2.0",
+    "css-loader": "^0.23.0",
+    "eslint-config-standard-react": "^1.2.1",
+    "file-loader": "^0.8.5",
+    "hjs-webpack": "^5.1.0",
+    "json-loader": "^0.5.4",
+    "keymirror": "^0.1.1",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "local-links": "^1.4.0",
+    "localforage": "^1.3.0",
+    "lodash": "^4.0.0",
+    "postcss-loader": "^0.8.0",
+    "remarkable": "^1.6.1",
+    "script-loader": "^0.6.1",
+    "standard": "^5.4.1",
+    "style-loader": "^0.13.0",
+    "stylus-loader": "^1.4.2",
+    "superagent": "^1.7.2",
+    "surge": "^0.17.3",
+    "url-loader": "^0.5.7",
+    "vdom-as-json": "^1.0.8",
+    "vdom-serialized-patch": "^1.0.2",
+    "vdom-to-html": "^2.2.0",
+    "vdom-virtualize": "^1.0.1",
+    "virtual-dom": "^2.1.1",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
+    "worker-loader": "^0.7.0"
+  },
+  "devDependencies": {},
+  "standard": {
+    "globals": [
+      "React"
+    ]
+  }
 }
