--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "babel-plugin-transform-react-jsx": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-register": "^6.2.0",
+    "codemirror": "^5.11.0",
     "css-loader": "^0.23.0",
     "eslint-config-standard-react": "^1.2.1",
     "file-loader": "^0.8.5",
+    "highlight.js": "^9.1.0",
     "hjs-webpack": "^5.1.0",
     "json-loader": "^0.5.4",
     "keymirror": "^0.1.1",
